# XPS_INTELLIGENCE_PLATFORM

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .yamllint.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LEGACY_DASHBOARD_MIGRATION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO.md  blueprint.md  index.html  package-lock.json  package.json  playwright.config.ts  supervisord.conf
.github/: ARCHITECTURE.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.infinity/: ACTIVE_MEMORY.md
FORENSIC_AUDIT/: .gitkeep  README.md  legacy_dashboard_discovery.md  legacy_dashboard_feature_matrix.json  repo_settings_report.json  repo_settings_report.md
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  railway.json  requirements.txt
apps/backend/api/: router.py
apps/backend/api/routes/: artifacts.py  autonomy.py  health.py  leads.py  llm.py  scraper.py
apps/backend/core/: config.py  database.py  logging.py  redis_client.py
apps/backend/migrations/: env.py  script.py.mako
apps/backend/migrations/versions/: 001_initial_schema.py
apps/backend/models/: artifact.py  lead.py  scrape_job.py
apps/backend/pipeline/: ingest.py  normalize.py  score.py
apps/backend/sandbox/: executor.py
apps/backend/schemas/: artifact.py  lead.py  scrape_job.py
apps/backend/tests/: test_health.py  test_leads.py  test_scraper.py
prompts/: 01_forensic_audit.prompt  02_monorepo_blueprint.prompt  03_runtime_unify_sandbox.prompt  (+1 more)
(+64 files in other folders)
